# panoramix

./: LICENSE  README.md  pyproject.toml  requirements.txt
panoramix/: .env  __init__.py  __main__.py  composer.py  dlmusic.hy  homeconf.py  makedocs.py  panoramix.hy  report.py  settings.py  themes.py  update.hy  update.py  utils.hy  utils.py
