[tool.poetry]
name = "panoramix"
version = "0.1.0"
description = ""
authors = ["Arkelis <guillaume.fayard@pycolore.fr>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
click = "^7.0"
requests = "^2.22"
hy = "1.0a4"
hyrule = "*"
deemix = "^3.0"
youtube_dl = "^2021.12.17"
qobuz-dl = "^0.9.9"
toolz = "*"


[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allow-prereleases = true}

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
